# decorator

./: exemplo_00.py  pyproject.toml
