[tool.poetry]
name = "decorator"
version = "0.1.0"
description = "decorator_00"
authors = ["alessandroerathos <alessandro.champoski@erathos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
